[tool.poetry]
name = "pydantic-duality"
version = "1.2.0"
description = "Automatically generate two versions of your pydantic models: one with Extra.forbid and one with Extra.ignore"
repository = "https://github.com/zmievsa/pydantic-duality"
readme = "README.md"
authors = ["Stanislav Zmiev <zmievsa@gmail.com>"]
license = "MIT"

[tool.coverage.run]
data_file = "coverage/coverage"

[tool.coverage.report]
fail_under = 100
skip_covered = true
skip_empty = true
# Taken from https://coverage.readthedocs.io/en/7.1.0/excluding.html#advanced-exclusion
exclude_lines = [
    "pragma: no cover",
    "assert_never\\(",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if False:",
    "if __name__ == .__main__.:",
    # Impossible to cover
    # It is impossible to cover "if TYPE_CHECKING" statements because they never actually run
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
    "__rich_repr__",
    "__repr__",
]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = ">=4.8.0"
pydantic = "^1.9.2"
cached-classproperty = ">=0.1.0"

[tool.poetry.dev-dependencies]
ruff = "*"
pytest = ">=7.2.1"
pytest-cov = ">=4.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
